# fruitbowl-tool

./: .claude_context  .gitignore  README.md  fruitbowl_tool.py  run.py
V35 - Fruitbowl 4/: model list.txt  pack.mcmeta
V35 - Fruitbowl 4/assets/fruitbowl/equipment/: alizeti_wings.json  ginger_wings.json  mothman_wings.json  snow_wings.json
V35 - Fruitbowl 4/assets/fruitbowl/items/: alien_antlers.json  arbazzu_doll.json  aria_spell_circle.json  ary_doll.json  axolotlhatblue.json  balloon_cluster.json  beef_jerky.json  belle_trident.json  bike_lego.json  black_board_blank.json  book_sketchbook_artdeco.json  brick.json  ceee.json  chef_hampter.json  chocolate_box.json  chocolate_box_open.json  cinfral_plush.json  cow_skull.json  doll_base.json  dust_spear_in_hand.json  dust_spear_throwing.json  dustin_hat.json  efo.json  (+58 more)
V37 - Fruitbowl 4/: fruitbowl elytra commands.txt  model list.txt
c/: CMakeLists.txt  Makefile  test_drop.c  test_drop2.c
c/build-release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  fruitbowl_tool
c/build-win/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
c/lib/: tinyfiledialogs.c
c/src/: filebrowser.c  filebrowser.h  filedialog.c  filedialog.h  gui.c  gui.h  main.c  model.c  model.h  pack.c  pack.h  renderer.c  renderer.h  types.h  util.c  util.h
fruitbowl_tool/: __init__.py  constants.py  core.py  deploy.py  gui.py  manage.py  settings.py  zfight.py
pack/: how to add to pack.txt  model list.txt
test-pack/: model list.txt  pack.mcmeta
(+472 files in other folders)
